# how-to-construct-mlops-with-amazon-sagemaker

./: .env.example  README.md
container/: .flake8  Dockerfile  Makefile  build_and_push.sh  docker-compose.yml  pyproject.toml
container/script/: __init__.py  deploy.py  deploy_endpoint.py  evaluate.py  hyperparameter_tuning.py  pipeline.py  preprocess.py  register_model.py  train.py  train_local.py
container/src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  serve  serve.py  train  train.py  wsgi.py
model/: Dockerfile  pyproject.toml
model/script/: preprocess.py  train.py
model/src/: main.py  train
sagemaker/: Makefile  pyproject.toml
sagemaker/src/: delete_endpoint.py  deploy_endpoint.py  evaluate.py  hyperparameter_tuning.py  pipeline.py  preprocess.py  register_model.py  run_batch_transform.py  train.py  utility.py
script/: pyproject.toml
script/script/: delete_endpoint.py  evaluate.py  hyperparameter_tuning.py  pipeline.py  run_batch_transform.py
script/src/: delete_endpoint.py  deploy_endpoint.py  evaluate.py  hyperparameter_tuning.py  pipeline.py  preprocess.py  register_model.py  run_batch_transform.py  train.py
