[tool.poetry]
name = "container"
version = "0.1.0"
description = ""
authors = ["ohke <kenta1988@gmail.com>"]

[tool.poetry.dependencies]
torch = "^1.11"
python = "^3.9"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.21.22"
sagemaker = {extras = ["local"], version = "^2.80.0"}
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
