[tool.poetry]
name = "container"
version = "0.1.0"
description = ""
authors = ["ohke <kenta1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8,<9"
flask = ">=2,<3"
gunicorn = "20.1.0"
torch = "^1.11"
torchvision = "^0.12.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
