[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["ohke <kenta1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.22"
sagemaker = {extras = ["local"], version = "^2.85.0"}
sagemaker-experiments = "^0.1.35"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
